chore: añadir test, configurar el build para que no se rompan los junit