@@ -2,12 +2,14 @@ apply plugin: 'com.android.application'
 apply plugin: 'androidx.navigation.safeargs'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.android.libraries.mapsplatform.secrets-gradle-plugin'
+apply plugin: 'jacoco'
 
 def secretsPropertiesFile = rootProject.file("secrets.properties")
 def secretsProperties = new Properties()
 if (secretsPropertiesFile.exists()) {
     secretsProperties.load(new FileInputStream(secretsPropertiesFile))
 }
+
 android {
     namespace "com.lksnext.parkingplantilla"
     buildToolsVersion "35.0.0"
@@ -22,8 +24,9 @@ android {
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         buildConfigField "String", "MAPS_API_KEY", "\"${secretsProperties['MAPS_API_KEY']}\""
-        manifestPlaceholders = [ MAPS_API_KEY: secretsProperties['MAPS_API_KEY'] ?: "" ]
+        manifestPlaceholders = [MAPS_API_KEY: secretsProperties['MAPS_API_KEY'] ?: ""]
     }
+
     composeOptions {
         kotlinCompilerExtensionVersion = "1.5.13"
     }
@@ -46,8 +49,23 @@ android {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
     }
-}
 
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(17)
+        }
+    }
+
+    testOptions {
+        unitTests.all {
+            jvmArgs(
+                    '--add-opens=java.base/java.lang=ALL-UNNAMED',
+                    '--add-opens=java.base/java.io=ALL-UNNAMED',
+                    '--add-opens=java.base/jdk.internal.reflect=ALL-UNNAMED'
+            )
+        }
+    }
+}
 
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.7.1'
@@ -58,9 +76,9 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.4.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+
     implementation platform('com.google.firebase:firebase-bom:33.16.0')
     implementation 'com.google.firebase:firebase-analytics'
-    implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-firestore'
     implementation 'com.google.firebase:firebase-messaging:24.1.2'
     implementation 'com.google.firebase:firebase-auth:23.2.1'
@@ -69,30 +87,39 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:21.3.0'
     implementation 'com.google.android.gms:play-services-maps:19.2.0'
     implementation 'com.google.android.gms:play-services-location:21.3.0'
-    implementation 'com.google.android.material:material:1.12.0'
     implementation 'com.google.firebase:firebase-storage:21.0.2'
+
     implementation 'com.github.bumptech.glide:glide:4.16.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.16.0'
+
+    implementation 'com.google.protobuf:protobuf-javalite:4.31.1'
     implementation "androidx.work:work-runtime:2.10.2"
 
     implementation platform('androidx.compose:compose-bom:2025.06.01')
-
-
     implementation 'androidx.compose.material3:material3'
     implementation 'androidx.activity:activity-compose:1.10.1'
     implementation 'androidx.compose.ui:ui'
     implementation 'androidx.compose.ui:ui-tooling-preview'
 
-
-
     testImplementation 'junit:junit:4.13.2'
     testImplementation 'org.mockito:mockito-core:5.18.0'
     testImplementation 'org.mockito:mockito-inline:5.2.0'
+    androidTestImplementation 'org.mockito:mockito-android:5.18.0'
     testImplementation 'androidx.arch.core:core-testing:2.2.0'
     testImplementation 'org.hamcrest:hamcrest:3.0'
 
-    androidTestImplementation 'androidx.test.ext:junit:1.2.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.6.1'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+    androidTestImplementation 'androidx.test:core:1.5.0'
     androidTestImplementation 'androidx.test:rules:1.6.1'
+    androidTestImplementation 'androidx.test.uiautomator:uiautomator:2.2.0'
 
+
+    debugImplementation "androidx.fragment:fragment-testing:1.8.8"
+
+    configurations.configureEach {
+        resolutionStrategy {
+            force 'com.google.protobuf:protobuf-javalite:3.25.1'
+        }
+    }
 }
